# covermint

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.beads/: config.yaml  issues.jsonl
.github/workflows/: release.yml
.pi/prompts/: release.md
contrib/config/: covermint.config.toml
contrib/systemd/: covermint.service
docs/: metadata-templating.md  transitions-3d.md
src/: artwork.rs  cli.rs  config.rs  control.rs  lyrics.rs  main.rs  monitor.rs  motion.rs  mpris.rs  player.rs  timestamp.rs
src/metadata/: animation.rs  mod.rs  template.rs  widgets.rs
src/model/: config.rs  lyrics.rs  media.rs  metadata.rs  mod.rs
src/transitions/: frame.rs  mod.rs
src/ui/: layout.rs  mod.rs  playback_clock.rs  runtime.rs  splash.rs  style.rs  widgets.rs
