[package]
name = "covermint"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk = { package = "gtk4", version = "0.11.1", features = ["v4_8"] }
gtk4-layer-shell = { version = "0.8.0", features = ["v1_3"] }
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
