[package]
name = "covermint"
version = "0.2.0"
edition = "2024"

[dependencies]
gtk = { package = "gtk4", version = "0.11.1", features = ["v4_8"] }
gtk4-layer-shell = { version = "0.8.0", features = ["v1_3"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
ureq = "2.12"
url = "2.5"
zbus = "4.4"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
